# buildem

./: .gitattributes  BuildSupport.cmake  CMakeLists.txt  CacheDownload.cmake  EasyInstall.cmake  ExternalProjectMultiPlatform.cmake  ExternalSource.cmake  FindCplex.cmake  FortranSupport.cmake  PatchSupport.cmake  PkgConfig.cmake  README.md  README_openblas.txt  SetBuildDir.cmake  TemplateSupport.cmake  actdiag.cmake  ann.cmake  ann_CMakeLists.txt  armadillo.cmake  atlas.cmake  backports-ssl_match_hostname.cmake  basho-leveldb.cmake  basholeveldb.cmake  blas.cmake  blist.cmake  blockdiag.cmake  blockedarray.cmake  boost.cmake  boost1550.cmake  bottleneck.cmake  chatty.cmake  cloud_sptheme.cmake  copy.py  counting.cmake  cplex-shared.cmake  cppnetlib.cmake  cppunit.cmake  cylemon.cmake  cython.cmake  cytoolz.cmake  (+147 more)
patches/: ann.patch  armadillo.patch  boost-osx-gcc-fix-config.sh  cylemon.patch  dlib.patch  do_patch.py  do_template.py  geos-CoordinateArraySequenceFactoryTest.cpp.patch  golang-1.0.3.patch  h5py-no-runtime.patch  h5py.patch  hdf5-1.patch  ilmbase-1.patch  ilmbase-clang.patch  jsoncpp-SConstruct-linux.patch  jsoncpp-SConstruct-mac.patch  jsoncpp-SConstruct.patch  lemon-test.patch  lemon.patch  libtiff.patch  matplotlib-setup-cfg.template  numpy.patch  openexr-clang.patch  openexr-exrenvmap.patch  openexr-exrmaketiled.patch  opengm.patch  openvdb-0.9.8.patch  pyfftw-setup.py.patch  pyqt4.patch  python-no-osx-launcher.patch  qimage2ndarray.patch  qt4-create-symlinks.sh  qt4-osx-draw-ellipse.patch  qt4-osx-mavericks-configure.patch  qt4-osx-mavericks-gui-pro.patch  readline-6.2-callback.patch  readline-6.2-input.patch  readline-6.2-patchlevel.patch  readline-6.2-shobj-conf.patch  readline-6.2-vi_mode.patch  (+12 more)
scripts/: copy.py  ping.py
templates/: do_template.py  exec.template  ilastik_final.in  ilastik_gui.template  ilastik_headless.template  ilastik_headless_test.template  ilastik_script.template  numpy-site-cfg-with-openblas.template  numpy-site-cfg.template  numpy_site.cfg.template  setenv_ilastik_gui.in  setenv_ilastik_gui.template  setenv_ilastik_headless.in  setenv_ilastik_headless.template
test_multi_platform/: CMakeLists.txt
test_multi_platform/foo/: CMakeLists.txt
